# nest

./: .ansible-lint  .gitignore  .gitmodules  .mcp.json.example  .yamllint  COMMANDS.md  README.md  ansible.cfg  renovate.json
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  deploy.yml  docs.yml  integration.yml  lint.yml  mcp-tests.yml  rpi5-nvme-watch.yml
ci/runner/: Dockerfile
docs/: arc-runners.md  dependencies.md  design.md  k8s-helm-migration.md  k8s-migration.md  rpi5-talos.md  tech-debt.md
docs/anagnorisis-fork/: Dockerfile  docker-build.yml
inventory/: hosts.yml
lidarr-ui/: Dockerfile  pyproject.toml
lidarr-ui/lidarr_ui/: config.py  lidarr.py  main.py
lidarr-ui/lidarr_ui/templates/: index.html
mcp/: .dockerignore  .gitignore  Dockerfile  ha-launch.sh  launch.sh  pyproject.toml  secrets.env.example
mcp/nest_mcp/: __main__.py  auth.py  config.py  http_client.py  serve.py  server.py  ssh_client.py
mcp/nest_mcp/tools/: adguard.py  arr.py  certs.py  docker_host.py  homeassistant.py  infra.py  jellyfin.py  jellyseerr.py  kubernetes.py  local.py  loki.py  mealie.py  media_files.py  pbs.py  prometheus.py  proxmox.py  scrutiny.py  seedbox.py  summary.py  unifi.py  vps.py
mcp/tests/: helpers.py  test_adguard.py  test_arr.py  test_certs.py  test_core.py  test_homeassistant.py  test_kubernetes.py  test_local.py  test_mealie.py  test_media_files.py  test_media_http.py  test_monitoring.py  test_pbs.py  test_prometheus.py  test_proxmox.py  test_server.py  test_ssh_tools.py  test_summary.py  test_unifi.py
playbooks/: audit.yml  check_updates.yml  site.yml  update_apt.yml  update_docker.yml  update_proxmox.yml  upgrade-debian.yml
scripts/: apply-tertiary.sh  backup-state.sh  bootstrap-talos.sh  bulk-subgen.sh  check-deploy-coverage.sh  check-helm-pvc-safety.sh  check-rpi5-nvme-issue.sh  check-talos-config.sh  check-talos-rpi5-overlay.sh  gen-mcp-secrets.sh  generate_diagram.py  join-talos-node.sh  pull-secrets.sh  requirements-diagram.txt
terraform/: .terraform.lock.hcl  adguard-secondary.tf  adguard-tertiary.tf  adguard.tf  apply-tertiary.sh  cloudflare.tf  import.sh  import_results.txt  lxc-ci.tf  lxc-dns-secondary.tf  lxc-docker.tf  lxc-fileserver.tf  lxc-foundry.tf  lxc-mcp.tf  lxc-monitoring.tf  lxc-musicbrainz.tf  lxc-scrutiny.tf  lxc-seedbox.tf  main.tf  outputs.tf  pve-firewall.tf  pve-storage.tf  pve-users.tf  results.txt  terraform.tfvars  variables.tf  versions.tf  vm-homeassistant.tf  vm-pbs.tf  vm-talos-alpha-control.tf  vm-talos-test-nodes.tf  vm-talos.tf  vps-vultr.tf
(+294 files in other folders)
