[project]
name = "lidarr-ui"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "pydantic-settings==2.14.2",
]

[project.scripts]
lidarr-ui = "lidarr_ui.main:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lidarr_ui"]
