[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nest-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]==1.28.1",
    "httpx==0.28.1",
    "pydantic-settings==2.14.2",
    "uvicorn==0.49.0",
]

[project.scripts]
nest-mcp = "nest_mcp.__main__:main"
nest-mcp-serve = "nest_mcp.serve:main"

[project.optional-dependencies]
test = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "genbadge[coverage]==1.1.3",
    # genbadge imports pkg_resources, removed in setuptools 81+.
    "setuptools<84",
]

[tool.hatch.build.targets.wheel]
packages = ["nest_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=nest_mcp --cov-report=term-missing --cov-report=xml --cov-fail-under=85"

[tool.coverage.run]
source = ["nest_mcp"]
# Entry points / server wiring are exercised by import (registration) but their
# runtime main()/serve() paths start a network server — not unit-testable.
omit = [
    "nest_mcp/__main__.py",
    "nest_mcp/serve.py",
    "nest_mcp/auth.py",
]
